--- a/Master Thesis/diplomski.tex
+++ b/Master Thesis/diplomski.tex
@@ -475,7 +475,7 @@ There are a lot of readily available datasets for experimenting on graphs and ge
 
 \subsection{Simulating \& Mutating Reads}
 
-Generating the reads for the dataset is a multi-step process. The yeast genome was stored in a simple FASTA file (Section \ref{subsubsec:fasta and fastq}) with the chromosomes written down in order. In the first step, we would simply extract the desired chromosome from the FASTA file or use the entire file for the genome-wide dataset. In the next step, in order to simulate fragmented chromosomes like if they were obtained in the process of shotgun sequencing (Section \ref{subsec:the process of sequencing and assembly}), we needed to generate artificial reads from the chromosome. This was done using the \texttt{seqrequester}\footnote{https://github.com/marbl/seqrequester} package and its \texttt{generate} functionality for generating reads. By setting the \texttt{-nreads} flag to the desired number, we could specify the number of reads the program would generate, and using the \texttt{-distribution} flag, we could choose the desired distribution for the reads (in our case, \texttt{pacbio-hifi}). We did this $n$ times, where $n$ is the number of graphs we wanted to generate for training, usually 100 for training and one for validation. After this was done, we ended up with $n$ files filled with simulated reads. We used a small C++ program\footnote{Courtesy of R. Vaser.} to mutate these reads into new ones of the same length with a mutation frequency of 0.01, meaning that every 100 base pairs, a base pair would get mutated into its complement base pair. Now, if the original simulated reads represented the mother's reads, these mutated ones could be thought of as the father's reads. Lastly, we combined the father's and mother's reads from each of the $2n$ ($n$ for the father's and $n$ for the mother's reads) files into a single file by concatenating them, which left us with $n$ files that were ready for the final sequencing process where we would obtain contigs and their overlaps which we could use for training our model.
+Generating the reads for the dataset is a multi-step process. The yeast genome was stored in a simple FASTA file (Section \ref{subsubsec:fasta and fastq}) with the chromosomes written down in order. In the first step, we would simply extract the desired chromosome from the FASTA file or use the entire file for the genome-wide dataset. In the next step, in order to simulate fragmented chromosomes like if they were obtained in the process of shotgun sequencing (Section \ref{subsec:the process of sequencing and assembly}), we needed to generate artificial reads from the chromosome. This was done using the \texttt{seqrequester}\footnote{https://github.com/marbl/seqrequester} package and its \texttt{generate} functionality for generating reads. By setting the \texttt{-nreads} flag to the desired number, we could specify the number of reads the program would generate, and using the \texttt{-distribution} flag, we could choose the desired distribution for the reads (in our case, \texttt{pacbio-hifi}\footnote{https://www.pacb.com/technology/hifi-sequencing/}). We did this $n$ times, where $n$ is the number of graphs we wanted to generate for training, usually 100 for training and one for validation. After this was done, we ended up with $n$ files filled with simulated reads. We used a small C++ program\footnote{Courtesy of R. Vaser.} to mutate these reads into new ones of the same length with a mutation frequency of 0.01, meaning that every 100 base pairs, a base pair would get mutated into its complement base pair. Now, if the original simulated reads represented the mother's reads, these mutated ones could be thought of as the father's reads. Lastly, we combined the father's and mother's reads from each of the $2n$ ($n$ for the father's and $n$ for the mother's reads) files into a single file by concatenating them, which left us with $n$ files that were ready for the final sequencing process where we would obtain contigs and their overlaps which we could use for training our model.
 
 \begin{figure}[h]
 	\centering
@@ -777,9 +777,17 @@ We again start with the accuracy, F1-score and model loss graphs. In Figure \ref
 \subsection{Precision \& Recall}
 \label{subsec:precision and recall chr}
 
-The precision and recall graphs are depicted in Figure \ref{fig:precision and recall chr}. We can see a much more interesting situation here than in the F1-score and accuracy graphs. In terms ov precision, the two models have fairly similar behavior, with the blue model being somewhat better than the pink one. They both oscillate precision in an attempt to optimize it. On the other hand, they are much closer in terms of performance of the recall metric, with the pink graph even somewhat outperforming the blue model, but later during training falling noticeably in performance. This explains how both models can have a high F1-score, but doesn't explain the low accuracy of the pink model.
+The precision and recall graphs are depicted in Figure \ref{fig:precision and recall chr}. We can see a much more interesting situation here than in the F1-score and accuracy graphs. In terms ov precision, the two models have fairly similar behavior, with the blue model being somewhat better than the pink one. They both oscillate precision in an attempt to optimize it. On the other hand, they are much closer in terms of performance of the recall metric, with the pink graph even somewhat outperforming the blue model, but later during training falling noticeably in performance. This explains how both models can have a high F1-score, but why does the pink model have such low accuracy then? A high recall value simply means that the model classified most of what is considered positive as indeed positive. A medium precision value, on the other hand, means that, although most examples it classified as positive are indeed positive, there are still a number of negatively labeled examples it classified as positive. The crucial thing to notice here is that the metrics say nothing about negative examples. The pink model might simply work great for positive examples, while simultaneously working poorly for negative examples. This ties in somewhat nicely with Figure \ref{fig:separated graph after training}, in which	
 
 \chapter{Conclusion}
+
+Bioinformatics is an important field of scientific research with many different applications and wide reaching effects. With the recent rise in deep learning, there remains a large gap in bioinformatics research to be filled, with numerous algorithms waiting to be improved with more state-of-the art methods from the field of deep learning, and to an extent, machine learning. In this regard, we here employ deep learning algorithms, specifically, Graph Neural Networks, to improve the process of haplotype separation. We test out numerous methods in order to find the best performing ones, and then perform further experiments with it on different datasets. The obtained results prove that, even without meticulous parameter optimization and while using mostly basic features, we can successfully separate haplotypes. However, numerous problems still present themselves, and new ones have also come up. Maybe the biggest issue faced here is the long and tedious pipeline of generating appropriate training data that heavily depends on the software used. We admittedly got lucky, and generated "good enough" data after only a few tries, but this setup is still far from optimal and more in-depth dataset analysis should be performed in future work. Parameters such as graph size and mutation frequency are an important topic that has barely been touched upon here, but can greatly influence the performance of the model. These parameters should be optimized based on the use case and should simulate real-world data.
+
+One consistent issue we faced with the simulated data was the fact that only one haplotype was successfully separated, with the other one being highly fragmented. In essence, our model didn't separate the haplotypes as much as "cleaning" one haplotype by removing parts from the other haplotype from it, as seen in Figure \ref{fig:separated graph after training}. However, this problem wasn't the fault of our model, but instead of the Raven assembler used for assembling reads. We used Pacific Biosciences hi-fi data for our experiments due to its high precision, but the Raven assembler wasn't optimized for it. Due to this, even before training our models, the haplotypes were suboptimally separated, as seen in Figure \ref{fig:separated graph}. Nevertheless, this data was good enough to give us valuable insights into the topic.
+
+The problems with the dataset don't stop there however. The issue of graph size and mutation frequency is an important topic that has barely been touched upon here, but can greatly influence the performance of the model. These parameters should be optimized based on the use case and should simulate real-world data. Aside from this, it has to be said that in this thesis, only simulated data was used. For a better picture of real-world performance, original PacBio hifi data needs to be used, which wasn't available for this thesis. Nevertheless, simulated data can also be a good indication of performance.
+
+There are numerous other ways to improve on this work. Probably the most fruitful path would be to try to integrate the assembly process with the simulation of data and subsequent haplotype separation in an \textit{end-to-end} process. By fixing assembly, we could also obtain some additional edge features, such as overlap quality data which could prove useful, as the largest bump in performance was seen from the addition of edge features into the attention mechanism. Aside from this, a general hyperparameter tuning setup, although time consuming, would be needed for final real-world usage.
 
 
 \bibliography{literatura}
