--- a/Master Thesis/diplomski.tex
+++ b/Master Thesis/diplomski.tex
@@ -60,7 +60,7 @@ backgroundcolor=\color{lightgray}
 \includepdf[pages=-]{"hr_0036510053_56.pdf"}
 
 % Dodavanje zahvale ili prazne stranice. Ako ne želite dodati zahvalu, naredbu ostavite radi prazne stranice.
-\zahvala{}
+\zahvala{The work displayed here was the result of numerous methods and preliminary work that wouldn't have been possible without the help of everyone on the LBCB team. Although many nameless people were involved in a lot of this, I can here name some that have become known to me and offered me invaluable help. First an foremost, I would like to thank my de facto mentor and guidance in this, Lovro Vrček. Truly, I was staggered by his readiness to help me and offer advice. This whole endeavor was hampered by our vastly different locations, but that didn't stop him from answering my pleas as soon as he could, and me annoying him whenever I obtained new and exciting results. None of this would have been nearly as fun without him. Next, I would also like to thank Mile Šikić for offering me this amazing project, which was exactly what I wanted. Last, but not least, I would like to thank Ivan Vujević, Tvrtko Brekalo and Krešimir Križanović for offering me assistance throughout this project.}
 
 \tableofcontents
 
@@ -500,7 +500,7 @@ We found that generating 5000 - 10 000 reads gave satisfactory results in combin
 
 After Raven is done with the assembly process, it outputs two files: a GFA file (Section \ref{subsubsec:gfa}) and CSV file (Section \ref{subsubsec:csv}). They both contain information about the contigs and their overlaps in a format suitable for generating a graph. They also contained different information in each, so to fully utilize all the graph information we had available to us, we needed to use both files. From the GFA file, we extract information about which contig belongs to the mutated reads and which one to the original simulated ones, as well as contig overlap length information. We extract them to a separate file for easier analysis and quicker fetching. An example of a graph obtained after assembly can be seen in Figure \ref{fig:graph}. Now, as we previously mentioned, our task is to separate the contigs into the father's and the mother's genome. In other words, if we are presented with a graph where nodes represent contigs and edges represent the overlaps between them, we need to remove edges between contigs that don't belong to the same parent. So for each edge, we specify if it's "correct",i.e. it connects two contigs belonging to the same parent, or "incorrect", meaning it connect two contigs belonging to different parents.
 
-We now have a dataset where each edge has a label, as well as a feature in the form of overlap length. The ratio of the non mutated nodes compared to the mutated nodes is on average around 2.5, while the ratio of labels is roughly 40:60, which is fairly balanced and good enough for the task we are trying to solve. That being said, after separation, only one of the haplotypes is well defined, with the other one being highly fragmented and incomplete. This can be seen in Figure \ref{fig:separated graph}. We suspect this is in part happening due to the way Raven assembles contigs, as it isn't optimized for pacbio-hifi data. Looking into this is outside the scope of this thesis, but is worth exploring in more detail in further work. Nevertheless, we can hope of successfully extracting at least one haplotype, which is enough to prove that the problem statement of this thesis is feasible: separating haplotypes is a task that can be effectively solved by employing deep learning. With all that being said, we can now use the dataset we created as input to our model in which we will load it into memory, generate additional features and transform it into a format fit for training.
+We now have a dataset where each edge has a label, as well as a feature in the form of overlap length. The ratio of the non mutated nodes compared to the mutated nodes is on average around 2.5, while the ratio of labels is roughly 40:60, which is fairly balanced and good enough for the task we are trying to solve. That being said, after separation, only one of the haplotypes is well defined, with the other one being highly fragmented and incomplete. This can be seen in Figure \ref{fig:separated graph}. We suspect this is in part happening due to the way Raven assembles contigs, as it isn't optimized for PacBio HiFi data. Looking into this is outside the scope of this thesis, but is worth exploring in more detail in further work. Nevertheless, we can hope of successfully extracting at least one haplotype, which is enough to prove that the problem statement of this thesis is feasible: separating haplotypes is a task that can be effectively solved by employing deep learning. With all that being said, we can now use the dataset we created as input to our model in which we will load it into memory, generate additional features and transform it into a format fit for training.
 
 \chapter{Implementation}
 
@@ -664,7 +664,7 @@ A smaller value for $L$ is better, so by minimizing this loss, we can train our 
 	\includegraphics[width=\textwidth]{images/accuracy_val.png}
 	\includegraphics[width=\textwidth]{images/f1_val.png}
 	\includegraphics[width=\textwidth]{images/loss_val.png}
-	\caption[Accuracy, f1-score and loss graph for one chromosome]{Graphs representing the accuracy (top), F1-score (middle) and model loss (bottom) for the validation part of the entire genome dataset of a few different models. Epochs are displayed on the $x$ axis, while on the $y$ axis, we have the respective performance metric. The graphs were obtained with the help of TensorBoard (Section \ref{sec:technology stack}).}
+	\caption[Accuracy, f1-score and loss graph for one chromosome]{Graphs representing the accuracy (top), F1-score (middle) and model loss (bottom) for the validation part of a one chromosome dataset of a few different models. Epochs are displayed on the $x$ axis, while on the $y$ axis, we have the respective performance metric. The graphs were obtained with the help of TensorBoard (Section \ref{sec:technology stack}).}
 	\label{fig:accuracy and f1 graph}
 \end{figure}
 
@@ -752,43 +752,48 @@ In Figure \ref{fig:precision and recall} we can see the graphs for precision (to
 	\includegraphics[width=\textwidth]{images/acc_chr.png}
 	\includegraphics[width=\textwidth]{images/f1_chr.png}
 	\includegraphics[width=\textwidth]{images/loss_chr.png}
-	\caption[Accuracy,f1-score and loss graph for different chromosomes]{Graphs representing the accuracy (top), F1-score (middle) and model loss (bottom) for the validation part for two different chromosome experiments. The models were trained for 250 epochs. The graphs were obtained using TensorBoard (Section \ref{sec:technology stack}).}
+	\caption[Accuracy,f1-score and loss graph for different chromosomes]{Graphs representing the accuracy (top), F1-score (middle) and model loss (bottom) for the validation part of the dataset for two different chromosome experiments. The models were trained for 250 epochs. The graphs were obtained using TensorBoard (Section \ref{sec:technology stack}).}
 	\label{fig:accuracy, f1 score and loss chr}
 \end{figure}
 
 \section{Experiments on Different Chromosomes}
 \label{sec:experiments on different chromosomes}
 
-To better test the claim that chromosomes share data, we ran an experiment in which we trained our model on one chromosome of yeast, and validated it on another. Specifically, we performed two experiments. In the first one, we trained on chromosome one, and validated on chromosome two, and in the second one, we trained on chromosome three and validated on chromosome two. We are aware that this is highly specific data and the results may be completely different for other chromosomes, but running tests on all chromosome combinations is extremely time consuming and outside the scope of this thesis. Nevertheless, it is an interesting topic of further research.
+To better test the claim that chromosomes share information, we ran experiments in which we trained our model on one chromosome of yeast, and validated it on another. Specifically, we performed two experiments. In the first one, we trained on chromosome one, and validated on chromosome two, and in the second one, we trained on chromosome three and validated on chromosome two. We are aware that this is highly specific data and that the results may be completely different for other chromosomes, but running tests on all chromosome combinations is extremely time consuming and outside the scope of this thesis. Nevertheless, it is an interesting topic of further research that is worth experimenting on.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\textwidth]{images/precision_chr.png}
 	\includegraphics[width=\textwidth]{images/recall_chr.png}
-	\caption[Precision and recall graph on chromosomes]{Graphs representing the precision (top) and recall (bottom) for the validation part of the chromosome experiments. The graphs were obtained using TensorBoard (Section \ref{sec:technology stack}).}
+	\caption[Precision and recall graph on chromosomes]{Graphs representing the precision (top) and recall (bottom) for the validation part for the two chromosome experiments. The graphs were obtained using TensorBoard (Section \ref{sec:technology stack}).}
 	\label{fig:precision and recall chr}
 \end{figure}
 
 \subsection{Accuracy, F1-Score \& Model Loss}
 \label{subsec:accuracy, f1-score and model loss chr}
 
-We again start with the accuracy, F1-score and model loss graphs. In Figure \ref{fig:accuracy, f1 score and loss chr}, we can see two different models. The model in blue represents a model that was trained on chromosome one of yeast, and validated on chromosome two. This way, we essentially "test" the knowledge we obtained on chromosome one on never before seen chromosome two. We can see that, although it obtains a high F1-score, it's accuracy is noticeably lower. We can also see clear signs of overfitting by the end of training. If we compare this to the pink model, we can see that overfitting starts much more early one. This model was trained on chromosome three, and validated on chromosome two. On this experiment, we exhibit noticeably worse performance in all performance metrics, especially accuracy. To better understand this behavior, we should look at the recall and precision graphs.
+We again start with the accuracy, F1-score and model loss graphs. In Figure \ref{fig:accuracy, f1 score and loss chr}, we can see two different models. The model in orange represents a model that was trained on the first chromosome of yeast, and validated on the second. By performing the experiment this way, we essentially "test" the knowledge we obtained on one chromosome of yeast on a never before seen different chromosome. We can see that the obtained results are quite good, although still weaker than the best model trained on one chromosome. Wa can also observe two interesting findings. Firstly, the models overfit much faster than in other experiments, which makes sense as they are validated on somewhat different data, while in the previous experiments, they were evaluated on the same data. Secondly, the graphs appear to be much more "jagged" in comparison to the other graphs. This might also be due to more noise in the validation dataset due to it being a different chromosome compared to the training dataset.
+
+The blue graph, representing training on chromosome three and validation on chromosome two, appears to be much the same as the orange model, albeit having somewhat better performance. This shows that different chromosomes exhibit different levels of information similarity, but validating this claim would require extensive testing and experimentation. For now, this is proof enough of our claims.
 
 \subsection{Precision \& Recall}
 \label{subsec:precision and recall chr}
 
-The precision and recall graphs are depicted in Figure \ref{fig:precision and recall chr}. We can see a much more interesting situation here than in the F1-score and accuracy graphs. In terms ov precision, the two models have fairly similar behavior, with the blue model being somewhat better than the pink one. They both oscillate precision in an attempt to optimize it. On the other hand, they are much closer in terms of performance of the recall metric, with the pink graph even somewhat outperforming the blue model, but later during training falling noticeably in performance. This explains how both models can have a high F1-score, but why does the pink model have such low accuracy then? A high recall value simply means that the model classified most of what is considered positive as indeed positive. A medium precision value, on the other hand, means that, although most examples it classified as positive are indeed positive, there are still a number of negatively labeled examples it classified as positive. The crucial thing to notice here is that the metrics say nothing about negative examples. The pink model might simply work great for positive examples, while simultaneously working poorly for negative examples. This ties in somewhat nicely with Figure \ref{fig:separated graph after training}, in which	
+The precision and recall graphs are depicted in Figure \ref{fig:precision and recall chr}. Similarly to the previous experiments, in the beginning, the model trades recall for precision to optimize performance, with recall again being significantly higher than precision, meaning that the way the model separates the haplotypes is till the same. The difference is that here, both metrics start falling off rather early on during training and never recover, a result of overfitting. The blue model again exhibits better performance, in accordance with the previous results. Interestingly enough, their recall metrics are quite similar and near perfect at their maximum, with a difference in performance being only noticeable in precision. This leads us to believe that most models in most use cases near perfectly select positive nodes, i.e. the mothers haplotype, while struggling more or less with how many negative examples they classified as positive. This is a useful starting point for further research, as it means that the biggest gain in performance may come from improving the recall metric of the model. We believe that most of this comes from the way the Raven assembler creates reads, already discussed in other chapters, which we will further discuss in the conclusion.	
 
 \chapter{Conclusion}
 
-Bioinformatics is an important field of scientific research with many different applications and wide reaching effects. With the recent rise in deep learning, there remains a large gap in bioinformatics research to be filled, with numerous algorithms waiting to be improved with more state-of-the art methods from the field of deep learning, and to an extent, machine learning. In this regard, we here employ deep learning algorithms, specifically, Graph Neural Networks, to improve the process of haplotype separation. We test out numerous methods in order to find the best performing ones, and then perform further experiments with it on different datasets. The obtained results prove that, even without meticulous parameter optimization and while using mostly basic features, we can successfully separate haplotypes. However, numerous problems still present themselves, and new ones have also come up. Maybe the biggest issue faced here is the long and tedious pipeline of generating appropriate training data that heavily depends on the software used. We admittedly got lucky, and generated "good enough" data after only a few tries, but this setup is still far from optimal and more in-depth dataset analysis should be performed in future work. Parameters such as graph size and mutation frequency are an important topic that has barely been touched upon here, but can greatly influence the performance of the model. These parameters should be optimized based on the use case and should simulate real-world data.
+Bioinformatics is an important field of scientific inquiry with many different real-world applications and wide reaching effects. With the recent rise in deep learning, there remains a large gap in bioinformatics research to be filled, with numerous algorithms waiting to be improved with more state-of-the art methods from the field of deep learning, and to an extent, machine learning. In this regard, we here employ deep learning algorithms, specifically, Graph Neural Networks, to improve the process of haplotype separation. We test out numerous methods in order to find the best performing ones, and then perform further experiments with it on different datasets. The obtained results prove that, even without meticulous parameter optimization and while using mostly basic features, we can successfully separate haplotypes. However, numerous problems still present themselves, and new ones have also come up. Maybe the biggest issue faced here is the long and tedious pipeline of generating appropriate training data that heavily depends on the software used. We admittedly got lucky, and generated "good enough" data after only a few tries, but this setup is still far from optimal and more in-depth dataset analysis should be performed in future work. Parameters such as graph size and mutation frequency are an important topic that has barely been touched upon here, but can greatly influence the performance of the model. These parameters should be optimized based on the use case and should simulate real-world data.
 
-One consistent issue we faced with the simulated data was the fact that only one haplotype was successfully separated, with the other one being highly fragmented. In essence, our model didn't separate the haplotypes as much as "cleaning" one haplotype by removing parts from the other haplotype from it, as seen in Figure \ref{fig:separated graph after training}. However, this problem wasn't the fault of our model, but instead of the Raven assembler used for assembling reads. We used Pacific Biosciences hi-fi data for our experiments due to its high precision, but the Raven assembler wasn't optimized for it. Due to this, even before training our models, the haplotypes were suboptimally separated, as seen in Figure \ref{fig:separated graph}. Nevertheless, this data was good enough to give us valuable insights into the topic.
+One consistent issue we faced with the simulated data was the fact that only one haplotype was successfully separated, with the other one being highly fragmented. In essence, during training, our model didn't separate the haplotypes as much as "cleaning" one haplotype by removing parts of the other haplotype from it, as seen in Figure \ref{fig:separated graph after training}. However, this problem wasn't the fault of our model, as much as of the Raven assembler used for assembling reads. We used Pacific Biosciences hi-fi data for our experiments due to its high precision, but the Raven assembler wasn't optimized for it. Due to this, even before training our models, the haplotypes were suboptimally separated, as can be seen in Figure \ref{fig:separated graph}. Nevertheless, this data was good enough to give us valuable insights into the topic.
 
-The problems with the dataset don't stop there however. The issue of graph size and mutation frequency is an important topic that has barely been touched upon here, but can greatly influence the performance of the model. These parameters should be optimized based on the use case and should simulate real-world data. Aside from this, it has to be said that in this thesis, only simulated data was used. For a better picture of real-world performance, original PacBio hifi data needs to be used, which wasn't available for this thesis. Nevertheless, simulated data can also be a good indication of performance.
+Aside from this, it has to be said that in this thesis, only simulated data was used. For a better picture of real-world performance, original PacBio HiFi reads from the yeast genome need to be used, which unfortunately weren't available for this thesis. Nevertheless, simulated data can also be a good indicator of performance, as well as useful baseline.
 
-There are numerous other ways to improve on this work. Probably the most fruitful path would be to try to integrate the assembly process with the simulation of data and subsequent haplotype separation in an \textit{end-to-end} process. By fixing assembly, we could also obtain some additional edge features, such as overlap quality data which could prove useful, as the largest bump in performance was seen from the addition of edge features into the attention mechanism. Aside from this, a general hyperparameter tuning setup, although time consuming, would be needed for final real-world usage.
+\section{Future Work}
 
+There are numerous other ways to improve on this work. Probably the most fruitful path would be to try to integrate the assembly process with the simulation of data, as well as with subsequent haplotype separation in an \textit{end-to-end} system. Such a system could reward complete haplotype reconstruction and penalize fragmented separation. By fixing the assembly process, we could also obtain some additional edge features, such as overlap quality data, which could prove useful, as the largest bump in performance was seen from the addition of edge features into the attention mechanism. Aside from this, this could potentially also solve the precision/recall discrepancy in our models, as they mostly favored one over the other, something we attributed to the imperfect way the haplotypes were generated. By creating a system that could separate haplotypes in a complete and accurate way, new pathways would open up for optimization and performance tuning to better apply the method to real-world applications, of which there are many.
+
+Something we also touched upon was an analysis of chromosome similarity. As haplotype separation could be performed on both individual chromosomes and on the whole genome, it would be useful to determine which method performed better. This would be very time consuming, but could eventually prove decisive. Also, a general hyperparameter tuning setup, although also time consuming, would be needed for final real-world usage. And finally, the method used in this thesis was based on Graph Neural Networks, an extremely new, fast moving, and exciting subfield of deep learning. With new methods and optimizations being pioneered every day, keeping up with the field and using the newest and most cutting edge methods is necessary for getting the most out of data and further advancing the field of bioinformatics.
 
 \bibliography{literatura}
 \bibliographystyle{abbrv}
@@ -797,12 +802,16 @@ There are numerous other ways to improve on this work. Probably the most fruitfu
 
 \title{Using Graph Neural Networks to Separate Haplotypes in Assembly Graphs}
 \begin{abstract}
+	
+Haplotype separation is an important task in bioinformatics with numerous real-world applications. Traditionally, heuristics and hand-crafted algorithms were used for solving this task. With the recent rise in deep learning algorithms, specifically, Graph Neural Networks, there remains a large gap in research to be filled with algorithm improvement. We employ Graph Neural Networks for haplotype separation on yeast data and our results on synthetic data are a success, proving the merit of this method. The best model, the Edge Graph Attention Network model, had an F1-score of 85.13\%, with one haplotype being almost perfectly separated, and problems arising only on the second one due to high fragmentation. It employed the attention mechanism on both node and edge features to leverage all data available in a graph. However, many issues arise that remain to be solved, the main one being the faulty haplotype data generation process. Nevertheless, this work opens up numerous alleyways of further research into the topic and offers a useful baseline.
 
 \keywords{Bioinformatics, Graph Neural Networks, GNN, Haplotype Separation, Deep Learning, Machine Learning}
 \end{abstract}
 
 \hrtitle{Korištenje graf neuronskih mreža za odvajanje haplotipa u grafovima astavljanja}
 \begin{sazetak}
+	
+Razdvajanje haplotipa je bitan zadatak u bioinformatici sa raznim primjenama u stvarnom svijetu. Tradicionalno, za rješavanje ovoga zadatka su korištene heuristike i ručno rađeni algoritmi. Sa nedavnim usponom algoritama dubokog učenja, specifično Graf Neuronskih Mreža, ostaje velika rupa u sitraživanju koju treba ispuniti poboljšanjem algoritama. Primjenjujemo Graf Neuronske Mreže za razdvajanje haplotipa na podatcima kvasca i naši rezultati na sintetičkim podacima su uspješni, time dokazujući snagu ove metode. Najbolji model, Graf Neuronska Mreža s Pažnjom na Bridovima je imala F1 vrijendost od 85.13\%, pri ćemu je jedan haplotip bio gotovo savršeno odvojen, a problemi su se javljali samo kod drugoga zbog visoke razdvojenosti. Model je koristio mehanizam pažnje na značajkama i čvorova i bridova da bi iskoristio sve dostupne podatke u grafu. Na žalost, mnogo problema i dalje nije riješeno, gdje je najveći problem neispravni proces stvaranja podataka haplotipa. Ipak, ovaj rad otvara znatne puteve istraživanja za ovu temu i daje korisnu bazu.
 
 \kljucnerijeci{Bioinformatika, Graf Neuronske Mreže, GNN, Odvajanje haplotipa, Duboko Učenje, Strojno Učenje}
 \end{sazetak}
